# rotate-plugin

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml  dll.yml
src/: Alignment.h  Alloc.h  Helper.h  Image.h  ImageRotate.h  Pixel.h  RotateFilter.cpp  RotateFilter.h
